# chord3

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  chopro.md  chord3.spec  rustfmt.toml
src/: chords.rs  key.rs  main.rs  pagedim.rs
