[package]
name = "chord3"
version = "0.3.1-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
repository = "https://github.com/kaj/chord3"
description = "Create pdf songbooks from chopro source."
license = "Beerware"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
lazy_static = "1.4.0"
pdf-canvas = "0.7.0"
regex = "1.5.4"
