[package]
name = "chord3"
version = "0.3.3-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
repository = "https://github.com/kaj/chord3"
description = "Create pdf songbooks from chopro source."
categories = ["text-processing", "command-line-utilities"]
keywords = ["chopro", "music", "lyrics", "guitar", "mandolin"]
license = "Beerware"
edition = "2021"

[dependencies]
clap = { version = "4.0.8", features = ["derive", "wrap_help"] }
lazy_static = "1.4.0"
pdf-canvas = "0.7.0"
regex = "1.5.4"
